StringInternSync test crashes in exit verification

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 11
    • Affects Version/s: None
    • Component/s: hotspot
    • None
    • b07

      But still seems to report that it passed.

      # Internal Error (/scratch/cphillim/hg/11sponsor-nmt/open/src/hotspot/share/classfile/javaClasses.inline.hpp:76), pid=40895, tid=40896
      # assert(is_instance(java_string)) failed: must be java_string
      #

      V [libjvm.so+0x18056b2] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, c
      har const*, int, unsigned long)+0x162
      V [libjvm.so+0x18065af] VMError::report_and_die(Thread*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
      V [libjvm.so+0xafb5ed] report_vm_error(char const*, int, char const*, char const*, ...)+0xdd
      V [libjvm.so+0xe669d6] java_lang_String::length(oop)+0x4e6
      V [libjvm.so+0xebd14e] java_lang_String::equals(oop, oop)+0x11e
      V [libjvm.so+0x1683fa4] StringTable::compare_entries(int, int, HashtableEntry<oop, (MemoryType)9>*, int, int, HashtableEntry<oop, (Memo
      ryType)9>*)+0x94
      V [libjvm.so+0x1684737] StringTable::verify_and_compare_entries()+0x227
      V [libjvm.so+0xe9e03b] before_exit(JavaThread*)+0x57b
      V [libjvm.so+0x100080c] JVM_Halt+0xac

      Test fromTonga/gc/gctests/StringInternSync/StringInternSync.java.

            Assignee:
            Coleen Phillimore
            Reporter:
            Coleen Phillimore
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: