8199137: StringInternSync test crashes in exit verification

Java_lang_String::equals(oop, oop) was buggy.

Reviewed-by: eosterlund, dholmes